# factorhub-mcp

./: Dockerfile  LICENSE  README.md  pyproject.toml  smithery.yaml
openclaw/: factorhub-skill.yaml
src/factorhub_mcp/: __init__.py  client.py  server.py
