[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "factorhub-mcp"
version = "0.1.0"
description = "MCP server for FactorHub — China A-share market data for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "FactorHub", email = "support@factorhub.cn" }]
keywords = ["mcp", "factorhub", "quant", "a-share", "finance", "ai-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
factorhub-mcp = "factorhub_mcp.server:main"

[project.urls]
Homepage = "https://factorhub.cn"
Repository = "https://github.com/michaelfeng/factorhub-mcp"
Documentation = "https://factorhub.cn/api-docs"

[tool.hatch.build.targets.wheel]
packages = ["src/factorhub_mcp"]
